ajout de la barre de navigation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,41 @@
         <title>JKS - Bâtiment et travaux publics</title>
     </head>
     <body>
-        
+        <header>
+
+                <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+                        <a class="navbar-brand" href="#" id="imgImac">JKS - SERVICES</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse alexNav" id="navbarNav">
+                            <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Mac</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">iPad</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">iPhone</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Watch</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">TV</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Music</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Assistance</a>
+                            </li>
+                            </ul>
+                        </div>
+                    </nav>
+
+        </header>
 
 
 
