--- a/index.html
+++ b/index.html
@@ -12,36 +12,27 @@
         <header>
 
                 <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-                        <a class="navbar-brand" href="#" id="imgImac">JKS - SERVICES</a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
+                    <a class="navbar-brand" href="#" id="imgImac">JKS - SERVICES</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
                         <div class="collapse navbar-collapse alexNav" id="navbarNav">
                             <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Mac</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">iPad</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">iPhone</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Watch</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">TV</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Music</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Assistance</a>
-                            </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Accueil</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Qui sommes-nous?</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Nos services</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Contact</a>
+                                </li>
                             </ul>
                         </div>
-                    </nav>
+                </nav>
 
         </header>
 
