--- a/index.html
+++ b/index.html
@@ -11,30 +11,37 @@
     <body>
         <header>
 
-                <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-                    <a class="navbar-brand" href="#" id="imgImac">JKS - SERVICES</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                        <div class="collapse navbar-collapse alexNav" id="navbarNav">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Accueil</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Qui sommes-nous?</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Nos services</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Contact</a>
-                                </li>
-                            </ul>
-                        </div>
-                </nav>
+            <!--Navbar -->
+            <nav class="mb-1 navbar navbar-expand-lg navbar-dark info-color">
+                <a class="navbar-brand" href="#">JKS - SERVICES</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
+                aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Qui sommes-nous?</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Nos services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>  
+                    </ul>
+                </div>
+            </nav>
+            <!--/.Navbar -->
 
         </header>
+
+        <main class="container-fluid" id="PageContent">
+
+        </main>
 
 
 
